--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,3 +9,9 @@
   font-family: "Gill Sans Extrabold", sans-serif;
   color-scheme: dark;
 }
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
